# provx

./: README.md  build.sbt  devenv.nix  justfile
.bsp/: sbt.json
.github/workflows/: scala.yml
lib/: .gitignore  LICENSE  README.md  build.sbt  devenv.nix
lib/.bsp/: sbt.json
metarunner/: .gitignore  execute.sh  go.mod  go.sum  justfile  main.go
metarunner/configs/: algorithm-op-only.conf  baseline-scaling.conf  combined.conf  config.das6.conf  es01-baseline.conf  es02-tracing.conf  es03-completeprovenance.conf  es04-provgraphpruning.conf  es05-datagraphpruning.conf  es06-combined.conf  formats.conf  joinvertices-op-only.conf  simple.conf  smart-pruning.conf  smoke.conf  tracing.conf
metarunner/templates/: launch.sh  magpie.sbatch-srun-provx  magpie.sbatch-srun-provx-with-yarn-and-hdfs
results/: .gitignore  config.py  devenv.nix  ingest.py  justfile  main.py  plots.py  pyproject.toml  schema.py
results/plots/das6/20240521-022009-tracing/: desc.csv
results/plots/das6/final/csv/: es01-duration.csv  es01-size.csv  es02-duration.csv  es03-duration.csv  es03-size.csv  es04-duration.csv  es04-size.csv  es05-duration.csv  es05-size.csv  es06-duration.csv  es06-size.csv
results/src/: config.py  ingest.py  main.py  plots copy.ipynb  plots.ipynb  plots.py  schema.py  utils.py
run/: .gitignore  README.md  cleanup.sh  config.das5.conf  config.das5.properties  config.das6.conf  config.local.properties  justfile
setup/: config.properties  justfile
src/main/scala/: Benchmark.scala  BenchmarkRunner.scala  PageRankBench.scala
src/main/scala/lineage/: Query.scala  (+15 more)
(+176 files in other folders)
