[tool.poetry]
name = "thesis-results"
version = "0.1.0"
description = "Plotting scripts for experimental results"
authors = ["Gilles Magalhaes <gilles.magalhaes@gmail.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
matplotlib = "^3.7.1"
pydantic = "^1.10.8"
pandas = "^2.1.3"
seaborn = "^0.13.0"
jupyterlab = "^4.0.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
